--- a/src/dapp/index.html
+++ b/src/dapp/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">FlightSurety by Manuel Pertek</a>
+        <a class="navbar-brand" href="#">Project 4 - FlightSurety by nhuttommy</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
             aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,32 +27,38 @@
         <h2>Purchase insurance</h2>
         <div class="row top-20">
             <p>
-            <label class="form">Flight</label>
-            <select id="flight-insurance" name="Flight">
-                <!-- Predefined flights see Files FlightSuretyApp.sol and 2_deploy_contracts.js -->
-                <option value="F1;1591128835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F1 @ 06/02/2020 8:13pm by Airline 1</option>
-                <option value="F2;1591229835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F2 @ 06/04/2020 12:17am by Airline 1</option>
-                <option value="F3;1591359935;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F3 @ 06/05/2020 12:25pm by Airline 1</option>
-            </select>
-            &nbsp;
-            <label class="form">Money</label> <input type="number" id="money-insurance" value="1">
-            &nbsp;
-            <btn class="btn btn-primary" id="purchase-insurance">Purchase insurance for flight</btn>
+                <label class="form">Flight</label>
+                <select id="flight-insurance" name="Flight">
+                    <!-- Predefined flights see Files FlightSuretyApp.sol and 2_deploy_contracts.js -->
+                    <option value="F1;1591128835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F1 @ 06/02/2020 8:13pm by
+                        Airline 1</option>
+                    <option value="F2;1591229835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F2 @ 06/04/2020 12:17am by
+                        Airline 1</option>
+                    <option value="F3;1591359935;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F3 @ 06/05/2020 12:25pm by
+                        Airline 1</option>
+                </select>
+                &nbsp;
+                <label class="form">Money</label> <input type="number" id="money-insurance" value="1">
+                &nbsp;
+                <btn class="btn btn-primary" id="purchase-insurance">Purchase insurance for flight</btn>
             </p>
         </div>
 
         <h2>Withdraw insurance</h2>
         <div class="row top-20">
             <p>
-            <label class="form">Flight</label>
-            <select id="flight-insurance-withdraw" name="Flight">
-                <!-- Predefined flights see Files FlightSuretyApp.sol and 2_deploy_contracts.js -->
-                <option value="F1;1591128835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F1 @ 06/02/2020 8:13pm by Airline 1</option>
-                <option value="F2;1591229835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F2 @ 06/04/2020 12:17am by Airline 1</option>
-                <option value="F3;1591359935;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F3 @ 06/05/2020 12:25pm by Airline 1</option>
-            </select>
-            &nbsp;
-            <btn class="btn btn-primary" id="withdraw-insurance">Withdraw insurance for flight</btn>
+                <label class="form">Flight</label>
+                <select id="flight-insurance-withdraw" name="Flight">
+                    <!-- Predefined flights see Files FlightSuretyApp.sol and 2_deploy_contracts.js -->
+                    <option value="F1;1591128835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F1 @ 06/02/2020 8:13pm by
+                        Airline 1</option>
+                    <option value="F2;1591229835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F2 @ 06/04/2020 12:17am by
+                        Airline 1</option>
+                    <option value="F3;1591359935;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F3 @ 06/05/2020 12:25pm by
+                        Airline 1</option>
+                </select>
+                &nbsp;
+                <btn class="btn btn-primary" id="withdraw-insurance">Withdraw insurance for flight</btn>
             </p>
         </div>
 
@@ -61,11 +67,14 @@
             <label class="form">Flight</label>
             <select id="flight-status" name="Flight">
                 <!-- Predefined flights see Files FlightSuretyApp.sol and 2_deploy_contracts.js -->
-                <option value="F1;1591128835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F1 @ 06/02/2020 8:13pm by Airline 1</option>
-                <option value="F2;1591229835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F2 @ 06/04/2020 12:17am by Airline 1</option>
-                <option value="F3;1591359935;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F3 @ 06/05/2020 12:25pm by Airline 1</option>
-              </select>
-              &nbsp;
+                <option value="F1;1591128835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F1 @ 06/02/2020 8:13pm by
+                    Airline 1</option>
+                <option value="F2;1591229835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F2 @ 06/04/2020 12:17am by
+                    Airline 1</option>
+                <option value="F3;1591359935;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F3 @ 06/05/2020 12:25pm by
+                    Airline 1</option>
+            </select>
+            &nbsp;
             <btn class="btn btn-primary" id="submit-oracle">Submit to Oracles</btn>
         </div>
     </main>
