update app front end

--- a/src/dapp/index.html
+++ b/src/dapp/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>FlightSurety by Manuel Pertek</title>
+    <title>Project 04 - FlightSurety</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
@@ -12,7 +12,7 @@
 <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">FlightSurety by Manuel Pertek</a>
+        <a class="navbar-brand" href="#">Project 04 - FlightSurety by Huynh Nhut NGUYEN</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
             aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,9 +30,9 @@
             <label class="form">Flight</label>
             <select id="flight-insurance" name="Flight">
                 <!-- Predefined flights see Files FlightSuretyApp.sol and 2_deploy_contracts.js -->
-                <option value="F1;1591128835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F1 @ 06/02/2020 8:13pm by Airline 1</option>
-                <option value="F2;1591229835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F2 @ 06/04/2020 12:17am by Airline 1</option>
-                <option value="F3;1591359935;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F3 @ 06/05/2020 12:25pm by Airline 1</option>
+                <option value="Flight 01;1657534498;0xf17f52151EbEF6C7334FAD080c5704D77216b732">Flight 01 by Airline 1</option>
+                <option value="Flight 02;1657534509;0xf17f52151EbEF6C7334FAD080c5704D77216b732">Flight 02 by Airline 1</option>
+                <option value="Flight 03;1657534516;0xf17f52151EbEF6C7334FAD080c5704D77216b732">Flight 03 by Airline 1</option>
             </select>
             &nbsp;
             <label class="form">Money</label> <input type="number" id="money-insurance" value="1">
@@ -47,9 +47,9 @@
             <label class="form">Flight</label>
             <select id="flight-insurance-withdraw" name="Flight">
                 <!-- Predefined flights see Files FlightSuretyApp.sol and 2_deploy_contracts.js -->
-                <option value="F1;1591128835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F1 @ 06/02/2020 8:13pm by Airline 1</option>
-                <option value="F2;1591229835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F2 @ 06/04/2020 12:17am by Airline 1</option>
-                <option value="F3;1591359935;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F3 @ 06/05/2020 12:25pm by Airline 1</option>
+                <option value="Flight 01;1657534498;0xf17f52151EbEF6C7334FAD080c5704D77216b732">Flight 01 by Airline 1</option>
+                <option value="Flight 02;1657534509;0xf17f52151EbEF6C7334FAD080c5704D77216b732">Flight 02 by Airline 1</option>
+                <option value="Flight 03;1657534516;0xf17f52151EbEF6C7334FAD080c5704D77216b732">Flight 03 by Airline 1</option>                         
             </select>
             &nbsp;
             <btn class="btn btn-primary" id="withdraw-insurance">Withdraw insurance for flight</btn>
@@ -61,9 +61,9 @@
             <label class="form">Flight</label>
             <select id="flight-status" name="Flight">
                 <!-- Predefined flights see Files FlightSuretyApp.sol and 2_deploy_contracts.js -->
-                <option value="F1;1591128835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F1 @ 06/02/2020 8:13pm by Airline 1</option>
-                <option value="F2;1591229835;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F2 @ 06/04/2020 12:17am by Airline 1</option>
-                <option value="F3;1591359935;0xf17f52151EbEF6C7334FAD080c5704D77216b732">F3 @ 06/05/2020 12:25pm by Airline 1</option>
+                <option value="Flight 01;1657534498;0xf17f52151EbEF6C7334FAD080c5704D77216b732">Flight 01 by Airline 1</option>
+                <option value="Flight 02;1657534509;0xf17f52151EbEF6C7334FAD080c5704D77216b732">Flight 02 by Airline 1</option>
+                <option value="Flight 03;1657534516;0xf17f52151EbEF6C7334FAD080c5704D77216b732">Flight 03 by Airline 1</option>
               </select>
               &nbsp;
             <btn class="btn btn-primary" id="submit-oracle">Submit to Oracles</btn>
